# batmet

./: .gitignore
calibrate/: README.md  agilent.py  batmet.py  cal_sink.py  calib.py  calibration.csv  collect.py  main.py  siglent.py
firmware/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32F334K8TX_FLASH.ld  firmware.ioc  stm32f334discovery.cfg
firmware/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
firmware/Src/: adc.c  dac.c  gpio.c  main.c  rtc.c  stm32f3xx_it.c  usart.c
hard/: .gitignore  batmet.asc  batmet.dch  batmet.dip
zfirm/: CMakeLists.txt  README.md  prj.conf  sample.yaml
zfirm/boards/arm/stm32f3_batmet/: Kconfig.board  Kconfig.defconfig  board.cmake  stm32f3_batmet.dts  stm32f3_batmet.yaml  stm32f3_batmet_defconfig
zfirm/src/: adc.c  cli.c  cmd.c  dac.c  led.c  main.c  main.h  opamp.c
